--- a/TallerGithub.Rmd
+++ b/TallerGithub.Rmd
@@ -94,31 +94,31 @@ investigación más reproducible y colaborativa!
 
 Ejemplos de como Github puede contribuir a las invetigaciones en Ecología:
 
-1. Storing and sharing research compendia.
+Storing and sharing research compendia.
 
 An research compendium includes all computational materials related to research production, including data, code for analyses and protocols
 
 GitHub allows administrative control over who can view and modify repositories, and the process of
 cloning, forking and suggesting changes through pull requests ensures code owners have full control over code and documents.
 
-2. Proyect continuity
+Proyect continuity
 
 Research code and data management upkeep tends to fall off as researchers move on to new
 projects or other institutions. Also, code and data can be difficult to access and recover when kept only on personal devices
 
-3. Peer review
+Peer review
 
 GitHub provides an open and transparent platform that can be used for either directly providing feedback on research products or addressing changes recommended by reviewers. GitHub Issues
 can be used to organize and discuss reviewer suggestions and to assign them to co-authors
 (https://github.com/SORTEE-Github-Hackathon/manuscript/issues?q=label%3A%22Reviewer+Comment%22).
 
 
-4. Collaborative and asynchronous code editing
+Collaborative and asynchronous code editing
 
 Version control allows researchers to make changes in code or documents without worrying about irreparably modifying someone else's work.
 
 users can clone, allowing for modifications to be done on a linked copy of a repository, which can then later be merged into the main project through pull requests
 
 
-- [Braga et al. 2022.](DOI: 10.1111/2041-210X.14108)
+[Braga et al. 2022.](DOI: 10.1111/2041-210X.14108)
 
